--- a/src/pages/Cadastro/file.css
+++ b/src/pages/Cadastro/file.css
@@ -74,3 +74,31 @@ input:focus {
     outline: none;
     border-color: #4caf50;
 }
+
+.home-container {
+    display: flex;
+    align-items: center;
+    margin-top: 2px;
+  }
+  
+  .home-icon {
+    margin-right: none;
+    font-size: 30px;
+  }
+  
+  .home-container a {
+    text-decoration: none;
+    color: #c8ddcd;
+  }
+  
+  .button-home {
+    background-color: #110f0f;
+    color: #fff;
+    padding: 12px;
+    border: none;
+    border-radius: 100px;
+    font-size: 0px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    align-items: center;
+  }
