modificações na home e inicio da aba descarte

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -126,10 +126,10 @@
 
 }
 
-.aprendizado {
-
-}
-
-.aprend_sec {
+.div_exemplo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 
 }
